Update index.html, lowercase o

--- a/movie-quotes/index.html
+++ b/movie-quotes/index.html
@@ -14,7 +14,7 @@
             <ul class="quotes" id="quotes1">
                 <li><span class="speaker">Dr. Peter Venkman:</span> "What I'd really like to do is talk to Dana. Dana? It's Peter."</li>
                 <li><span class="speaker">Dana Barrett:</span> "There is no Dana, there is only Zuul."</li>
-                <li><span class="speaker">Dr. Peter Venkman:</span> "Oh, Zuulie, you nut, now c'mon. Just relax, c'mon. I want to talk to Dana. Dana, Dana. Can I talk to Dana?"</li>
+                <li><span class="speaker">Dr. Peter Venkman:</span> "oh, Zuulie, you nut, now c'mon. Just relax, c'mon. I want to talk to Dana. Dana, Dana. Can I talk to Dana?"</li>
                 <li><span class="speaker">Dana Barrett:</span> <span class="scene-description">[in an inhuman demonic voice]</span> "There is no Dana, only Zuul!"</li>
                 <li><span class="speaker">Dr. Peter Venkman:</span> "What a lovely singing voice you must have."</li>
             </ul>
@@ -23,7 +23,7 @@
             <ul class="quotes" id="quotes2">
                 <li><span class="speaker">Dr. Peter Venkman:</span> "This city is headed for a disaster of biblical proportions."</li>
                 <li><span class="speaker">Mayor:</span> "What do you mean, 'biblical?'"</li>
-                <li><span class="speaker">Dr Ray Stantz:</span> "What he means is Old Testament, Mr. Mayor, real wrath of God type stuff."</li>
+                <li><span class="speaker">Dr Ray Stantz:</span> "What he means is old Testament, Mr. Mayor, real wrath of God type stuff."</li>
                 <li><span class="speaker">Dr. Peter Venkman:</span> "Exactly."</li>
                 <li><span class="speaker">Dr Ray Stantz:</span> "Fire and brimstone coming down from the skies! Rivers and seas boiling!"</li>
                 <li><span class="speaker">Dr. Egon Spengler:</span> "Forty years of darkness! Earthquakes, volcanoes..."</li>
