--- a/type-styles/index.html
+++ b/type-styles/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Font Styling Exercise - Max Douglass - IFSP24</title>
@@ -15,89 +16,88 @@
         </header>
         <main>
             <section id="font_weight" class="property_section">
-                <h2>font-weight:</h2>
-                <section >
-                    <p>light;</p>
+                <h2 class="font-property">font-weight:</h2>
+                <section>
+                    <p class="property-value">light;</p>
                     <p id="font_weight_light">Sphinx of black quartz, judge my vow.</p>
                 </section>
-                <section >
-                    <p>normal;</p>
+                <section>
+                    <p class="property-value">normal;</p>
                     <p id="font_weight_normal">Sphinx of black quartz, judge my vow.</p>
                 </section>
-                <section >
-                    <p>bold;</p>
+                <section>
+                    <p class="property-value">bold;</p>
                     <p id="font_weight_bold">Sphinx of black quartz, judge my vow.</p>
                 </section>
             </section>
 
             <section id="font_style" class="property_section">
-                <h2>font-style:</h2>
-                <section >
-                    <p>normal;</p>
+                <h2 class="font-property">font-style:</h2>
+                <section>
+                    <p class="property-value">normal;</p>
                     <p id="font_style_normal">Sphinx of black quartz, judge my vow.</p>
                 </section>
-                <section >
-                    <p>italic;</p>
+                <section>
+                    <p class="property-value">italic;</p>
                     <p id="font_style_italic">Sphinx of black quartz, judge my vow.</p>
                 </section>
             </section>
 
             <section id="letter_spacing" class="property_section">
-                <h2>letter-spacing:</h2>
-                <section >
-                    <p>normal;</p>
+                <h2 class="font-property">letter-spacing:</h2>
+                <section>
+                    <p class="property-value">normal;</p>
                     <p id="letter_spacing_normal">Sphinx of black quartz, judge my vow.</p>
                 </section>
-                <section >
-                    <p>0.3em;</p>
+                <section>
+                    <p class="property-value">0.3em;</p>
                     <p id="letter_spacing_bigger">Sphinx of black quartz, judge my vow.</p>
                 </section>
-                <section >
-                    <p>-0.06em;</p>
+                <section>
+                    <p class="property-value">-0.06em;</p>
                     <p id="letter_spacing_smaller"> Sphinx of black quartz, judge my vow.</p>
                 </section>
             </section>
 
             <section id="text_decoration" class="property_section">
-                <h2>text-decoration:</h2>
-                <section >
-                    <p>none;</p>
+                <h2 class="font-property">text-decoration:</h2>
+                <section>
+                    <p class="property-value">none;</p>
                     <p id="text_decoration_none">Sphinx of black quartz, judge my vow.</p>
                 </section>
                 <section>
-                    <p>underline;</p>
+                    <p class="property-value">underline;</p>
                     <p id="text_decoration_underline">Sphinx of black quartz, judge my vow.</p>
                 </section>
                 <section>
-                    <p>line-through;</p>
+                    <p class="property-value">line-through;</p>
                     <p id="text_decoration_line_through">Sphinx of black quartz, judge my vow.</p>
                 </section>
-                <section >
-                    <p>overline;</p>
+                <section>
+                    <p class="property-value">overline;</p>
                     <p id="text_decoration_overline">Sphinx of black quartz, judge my vow.</p>
                 </section>
             </section>
 
             <section id="text_transform" class="property_section">
-                <h2>text-transform</h2>
-                <section >
-                    <p>none;</p>
+                <h2 class="font-property">text-transform:</h2>
+                <section>
+                    <p class="property-value">none;</p>
                     <p id="text_transform_none">Sphinx of black quartz, judge my vow.</p>
                 </section>
-                <section >
-                    <p>uppercase;</p>
+                <section>
+                    <p class="property-value">uppercase;</p>
                     <p id="text_transform_uppercase">Sphinx of black quartz, judge my vow.</p>
                 </section>
-                <section >
-                    <p>lowercase;</p>
+                <section>
+                    <p class="property-value">lowercase;</p>
                     <p id="text_transform_lowercase">Sphinx of black quartz, judge my vow.</p>
                 </section>
-                <section >
-                    <p>capitalize;</p>
+                <section>
+                    <p class="property-value">capitalize;</p>
                     <p id="text_transform_capitalize">Sphinx of black quartz, judge my vow.</p>
                 </section>
             </section>
-
         </main>
     </body>
 </html>
