--- a/buttons/index.html
+++ b/buttons/index.html
@@ -15,6 +15,14 @@
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">	
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 		<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -209,11 +217,11 @@
 			</div>
 
             <div class="button_container">
-				<a href="https://www.samsung.com/us/" target="_blank" id="btn_samsung"><span>samsung</span></a>
+				<a href="https://www.samsung.com/us/" target="_blank" id="btn_samsung"><span>SAMSUNG</span></a>
 			</div>
 
             <div class="button_container">
-				<a href="http://www.cartoonnetwork.com/" target="_blank" id="btn_cartoon-network"><span>cartoon network</span></a>
+				<a href="http://www.cartoonnetwork.com/" target="_blank" id="btn_cartoon-network"><span class="c">C</span><span class="n">N</span></a>
 			</div>
 
             <div class="button_container">
@@ -221,15 +229,15 @@
 			</div>
 
             <div class="button_container">
-				<a href="https://tuckerallen.com/" target="_blank" id="tuckerallen"><span>Tucker Allen</span></a>
+				<a href="https://www.apple.com/" target="_blank" id="apple"><span><i class="fa-brands fa-apple"></i></span></a>
 			</div>
 
             <div class="button_container">
-				<a href="https://www.facebook.com/" target="_blank" id="btn_facebook"><span>Facebook</span></a>
+				<a href="https://www.facebook.com/" target="_blank" id="btn_facebook"><span><i class="fa-brands fa-facebook"></i></span></a>
 			</div>
 
             <div class="button_container">
-				<a href="https://www.nike.com/" target="_blank" id="btn_Nike"><span>Nike</span></a>
+				<a href="https://www.nike.com/" target="_blank" id="btn_Nike"><span>NIKE</i></span></a>
 			</div>
 
             <div class="button_container">
